# ants

./: .gitignore  Ants.hs  AntsGloss.cabal  Caching.hs  GamePlay.hs  Options.hs  README.md  ReadInstructions.hs  ReadWorld.hs  Simulator.hs  ant1.ant  ants.cabal  stack.yaml
app/: Ants.hs  Caching.hs  GamePlay.hs  Simulator.hs
src/: Ant.hs  Arguments.hs  Config.hs  Grid.hs  Main.hs  Map.hs  Model.hs  Parser.hs  Picture.hs  View.hs
src/Controller/: Event.hs  Time.hs
src/Parser/: StateMachine.hs  StateMachineParser.hs  Test.hs  World.hs  WorldParser.hs
src/Picture/: Cell.hs
