name:                ants
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ants#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ants-exe
  hs-source-dirs:      app
  main-is:             Ants.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , array
                     , containers
                     , transformers
                     , wx
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ants
